# xpsusd

./: .gitignore  CMakeLists.txt  LICENSE
xpsusd/: CMakeLists.txt
xpsusd/inc/: bin_io.h  utility.h  xps.h  xps_reader.h
xpsusd/src/: xps_reader.cpp  xpsusd.cpp
